<resources>
    <string name="app_name">TaskMaster</string>
    <string name="task">My Tasks</string>
    <string name="addTask">ADD TASK</string>
    <string name="allTask">All Tasks</string>

    <string name="addTask2">Add Task</string>
    <string name="taskTitle">Task Title</string>
    <string name="myTask">My Task</string>
    <string name="taskDesc">Task Description</string>
    <string name="doTask">Do Something</string>
    <string name="totalTask">total tasks: 0</string>
    <string name="upload">Upload Image</string>


    <string name="back">Back</string>

    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <string name="action_settings">setting</string>
    <string name="username">User Name</string>
    <string name="submit">Submit</string>
    <string name="Task1">"Task 1 "</string>
    <string name="Task2">Task 2</string>
    <string name="Task3">Task 3</string>
    <string name="state">Task State</string>
    <string name="teams">teams</string>
    <string name="Alltext">TextView</string>


    <string-array name="states">
        <item>New</item>
        <item>In_Progress</item>
        <item>Complete</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_activity_signUp">signUp</string>
    <string name="label_enter_code">"Enter Verification Code "</string>
    <string name="logout">logout</string>
    <string name="dialog_text">Error</string>


        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="login">Login</string>
        <string name="password">Password</string>
        <string name="e_mail">Email</string>
        <string name="tag">Let\'s join us and \nBuild your Tasks</string>
        <string name="register">Register</string>
        <string name="your_name">User Name</string>
    <string name="translate">Translate</string>
    <string name="IntAds">Interstitial_Ad</string>
    <string name="Rewarded_Ad">Rewarded_Ad</string>
</resources>